# ampersend-sdk

./: .env.example  .envrc  .gitignore  .gitmodules  .npmrc  .prettierignore  CLAUDE.md  README.md  RELEASING.md  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: account-modules-ci.yml  python-a2a-x402-release.yml  python-release-test.yml  python-release.yml  rust-ci.yml  rust-release.yml  skill-release.yml  typescript-ci.yml  typescript-release-test.yml  typescript-release.yml
docs/: getting-started.md
docs/internal/: card-command-plan.md  tour-plan.md
docs/spec/: voice.md
python/: README.md
python/ampersend-sdk/: README.md  pyproject.toml
python/examples/: README.md
rust/ampersend-sdk/: Cargo.toml  README.md
rust/ampersend-sdk/src/: error.rs  lib.rs
rust/ampersend-sdk/src/ampersend/: client.rs  management.rs  mod.rs  treasurer.rs  types.rs
rust/ampersend-sdk/src/http/: adapter.rs  factory.rs  mod.rs  v2_adapter.rs
rust/ampersend-sdk/src/mcp/: mod.rs  types.rs
rust/ampersend-sdk/src/mcp/client/: factory.rs  mcp_client.rs  middleware.rs  mod.rs
rust/ampersend-sdk/src/mcp/proxy/: bridge.rs  env.rs  factory.rs  mod.rs  server.rs  validation.rs
rust/ampersend-sdk/src/mcp/server/: fastmcp.rs  mod.rs
rust/ampersend-sdk/src/smart_account/: constants.rs  mod.rs  signing.rs  types.rs
rust/ampersend-sdk/src/x402/: mod.rs  treasurer.rs  types.rs  wallet.rs
rust/ampersend-sdk/src/x402/treasurers/: mod.rs  naive.rs
rust/ampersend-sdk/src/x402/wallets/: account.rs  mod.rs
rust/ampersend-sdk/src/x402/wallets/smart_account/: exact.rs  mod.rs  wallet.rs
rust/ampersend-sdk/tests/: fastmcp_test.rs  http_adapter_test.rs  integration_test.rs  management_test.rs  mcp_client_test.rs  mcp_types_test.rs  proxy_env_test.rs  signing_test.rs  treasurer_test.rs  types_test.rs  v2_adapter_test.rs  validation_test.rs  wallet_test.rs
typescript/: README.md  eslint.config.mjs
(+119 files in other folders)
